@@ -180,9 +180,7 @@
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Current Shortcuts</u>:<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Enter/Space</b>: Play selected song<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Delete</b>: Remove selected song(s)<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-E</b>: Add selected song(s) to playlist queue<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-I</b>: Center currently playing song<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Shift-E</b>: Remove selected song(s) from playlist queue<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Shift-S</b>: Save playlist<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Ctrl-Delete</b>: Clear list<br/>
 			
